# Withings2Garmin

./: .gitignore  README.md  fit.py  fit_encoder.py  flow.py  garmin.py  garmin_client.py  pyproject.toml  requirements.txt  run.bat  run.sh  sync.py  test.py  withings2.py  withings_client.py
.github /workflows/: ci.yml
boto3-1.19.10.dist-info/: METADATA  RECORD
botocore-1.22.10.dist-info/: METADATA  RECORD
charset_normalizer-2.0.7.dist-info/: RECORD
config/: secret.json  withings_app.json  withings_user.json
jmespath-0.10.0.dist-info/: RECORD
s3transfer-0.5.0.dist-info/: RECORD
sample/: .env.example
utils/: precommit.sh
